Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Metadata untuk Discord dan WhatsApp -->
     <meta property="og:title" content="Hello! By Zuazuaman | Has visit: <span id='visitorCount'>0</span>">
     <meta property="og:description" content="This web created by Zuazuaman | Has visit: <span id='visitorCount'>0</span>">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="ee.png">
     <meta property="og:url" content="https://zuazuaman.github.io/discord.gg/">
 
     <title>Zuazuaman web</title>
